[project]
name = "2024-kaggle-llm-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wandb>=0.18.5",
    "transformers[sentencepiece]==4.44.0",
    "peft==0.12.0",
    "accelerate==0.33.0",
    "bitsandbytes>=0.44.1",
    "trl>=0.11.4",
    "numpy>=1.26.4",
    "polars>=1.12.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tqdm>=4.66.6",
    "jinja2>=3.1.4",
]
